Se agrego tarjeta de Git

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
               <div class="card card-lenguaje d-flex flex-column justify-content-between bg-light mb-3">
                 <div class="card-header"><i class="bi bi-star-fill"></i></div>
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" class="card-img-top" alt="Responsive image">
+                  <img src="Visual Basic.png" class="card-img-top" alt="Responsive image">
                 <div class="card-body">
-                  <h4 class="card-title" data-toggle="tooltip" data-placement="top" title="Es gratis, Open source">Python</h4>
-                  <h6 class="card-subtitle text-muted">Leguaje de programacion</h6>
-                  <p class="card-text">Creador: Guido van Rossum</p>
-                  <p class="card-text"><small class="text-muted">Recomendado por Rafael Chaidez Rosas</small></p>
-                  <a href="https://www.python.org/" target="_blank" class="btn btn-info" role="button" aria-pressed="true">Entrar</a>
+                  <h4 class="card-title" data-toggle="tooltip" data-placement="top" title="Es gratis, Open source">Visual Basic</h4>
+                  <h6 class="card-subtitle text-muted">Leguaje de programacion permitir la creación de aplicaciones orientadas a Windows</h6>
+                  <p class="card-text">Creador: Alan Cooper para Microsoft.</p>
+                  <p class="card-text"><small class="text-muted">Recomendado por Raul Antonio Araiza Verdugo</small></p>
+                  <a href="https://cursosenlinea.tic.unam.mx/sl/Temarios/Lenguaje_de_programacion_VISUAL_BASIC_.NET.html#:~:text=Presentación-,Visual%20Basic%20.,un%20entorno%20sumamente%20distribuido%3A%20Internet. target="_blank" class="btn btn-info" role="button" aria-pressed="true">Entrar</a>
                 </div>
               </div>
 
