--- a/lista.html
+++ b/lista.html
@@ -45,10 +45,10 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>123456789</td>
-                            <td>Alumno Ejemplo</td>
+                            <td>181061142</td>
+                            <td>Raul Antonio Araiza Verdugo</td>
                             <td>
-                                <a href="./plantilla.html" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Entrar</a>
+                                <a href="./Raul1311.html" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Entrar</a>
                             </td>
                         </tr>
                     </tbody>
